--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homework 10</title>
+    <title>Search your country!</title>
+    <link
+    rel="icon"
+    type="image/png"
+    sizes="16x16"
+    href="./images/favicon-16x16.png"
+  />
   </head>
   <body>
     <input type="text" id="search-box" placeholder="What country are you looking for?"/>
